[package]
name = "argfile"
version = "0.1.4"
description = "Load additional CLI args from file"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-cli/argfile.git"
homepage = "https://github.com/rust-cli/argfile"
documentation = "http://docs.rs/argfile/"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "clap"]
edition = "2021"
rust-version = "1.56.1"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/rust-cli/argfile/compare/{{tag_name}}...HEAD", exactly=1},
]

[features]
default = []
response = ["shlex"]

[dependencies]
os_str_bytes = "6.0"
shlex = { version = "1.1.0", optional = true }

[dev-dependencies]
clap = "3.0.0-rc.3"
wild = "2.0"
